Always fetch roles from backend